fixing alignments on images

--- a/_sass/pooleparty/_base.pre.scss
+++ b/_sass/pooleparty/_base.pre.scss
@@ -44,8 +44,8 @@ a {
 }
 
 .lead {
-  margin-left: -1rem;
-  margin-right: -1rem;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .content img, .img,
