--- a/_sass/pooleparty/_message.pre.scss
+++ b/_sass/pooleparty/_message.pre.scss
@@ -20,7 +20,7 @@
   padding: 1rem;
   color: var(--gray-text);
   background-color: var(--gray-bg);
-  margin-left: -1rem;
-  margin-right: -1rem;
+  margin-left: 0;
+  margin-right: 0;
 }
 // >>>>>
